# fedra

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  main.py  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini
anomaly_dfl/: anomaly_dfl.py
anomaly_dfl/models/: simple_nn_classification.py
anomaly_dfl/network/: callbacks.py  handler.py  peer_status_manager.py
anomaly_dfl/utils/: operations.py  ops.py  process.py  state.py
conf/: node.conf
config/: node.conf
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/autodocs/: anomaly_dfl.models.rst  anomaly_dfl.network.rst  anomaly_dfl.p2p.rst  anomaly_dfl.rst  anomaly_dfl.utils.rst  fedra.models.rst  fedra.network.rst  fedra.rst  fedra.utils.rst  modules.rst
fedra/: fedra.py
fedra/models/: dropout_lstm_regression.py  notes.md
fedra/network/: handler.py
fedra/utils/: operations.py  process.py
models/: net.py
p2p/: p2p_callbacks.py  p2p_handler.py  peer_status_manager.py
tests/: node1.key  node2.key  node3.key  node4.key  test_avg.py  test_avg_rounds.py  test_config_parsing.py  test_handler.py  test_model.py  test_operations.py  test_peer_status.py  test_serialization_deserialization.py  test_state.py  test_weight_utils.py
utils/: data_loader.py  weight_utils.py
