[metadata]
name = anomaly-dfl
version = file: VERSION
description = bla bla bla
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Anastasios Kaltakis
author_email = anastasioskaltakis@gmail.com
url = https://github.com/anaskalt/anomaly-dfl
license = MIT
keywords = python, iot
classifiers =
    Programming Language :: Python :: 3
platforms = any


[options]
packages =
    bla
    bla.utils

# setup.cfg does not yet support passing dependencies
# from a file the way version is inserted above. Thus,
# in order not to pass the dependencies by hand -- and have 
# them duplicate here and in the requirements.txt -- we
# leave install_requires commented and read the 
# requirements  from the setup.py.
#install_requires =
#    ...


[options.entry_points]
console_scripts =
    ascii2mqtt=bla.bla:main


[flake8]
exclude = .git
max-line-length = 129
