[metadata]
name = fedra
version = file: VERSION
description = Decentralized federated learning framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Anastasios Kaltakis
author_email = anastasioskaltakis@gmail.com
url = https://github.com/anaskalt/fedra
license = MIT
keywords = python, iot
classifiers =
    Programming Language :: Python :: 3
platforms = any


[options]
packages =
    fedra
    fedra.utils
    fedra.models
    fedra.network

# setup.cfg does not yet support passing dependencies
# from a file the way version is inserted above. Thus,
# in order not to pass the dependencies by hand -- and have 
# them duplicate here and in the requirements.txt -- we
# leave install_requires commented and read the 
# requirements  from the setup.py.
#install_requires =
#    ...


[options.entry_points]
console_scripts =
    fedra=fedra.fedra:main


[flake8]
exclude = .git
max-line-length = 129
